// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render soundcloud blocks multiple occurrences 1`] = `
"<p>
<iframe src=\\"https://w.soundcloud.com/player/?visual=true&amp;url=https%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F871426135&amp;show_artwork=true&amp;maxheight=166\\" height=\\"166\\" width=\\"100%\\"></iframe><iframe src=\\"https://w.soundcloud.com/player/?visual=true&amp;url=https%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F871426135&amp;show_artwork=true&amp;maxheight=166\\" height=\\"166\\" width=\\"100%\\"></iframe><iframe src=\\"https://w.soundcloud.com/player/?visual=true&amp;url=https%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F871426135&amp;show_artwork=true&amp;maxheight=166\\" height=\\"166\\" width=\\"100%\\"></iframe>
</p>
"
`;

exports[`render soundcloud blocks single line 1`] = `
"<p>
<iframe src=\\"https://w.soundcloud.com/player/?visual=true&amp;url=https%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F871426135&amp;show_artwork=true&amp;maxheight=166\\" height=\\"166\\" width=\\"100%\\"></iframe>
</p>
"
`;

exports[`render youtube blocks repeated youtube 1`] = `
"<p>
</p><div class=\\"youtube-video\\">
<iframe type=\\"text/html\\" src=\\"https://www.youtube.com/embed/52c_QSg64fs\\"></iframe>
</div>
 
<div class=\\"youtube-video\\">
<iframe type=\\"text/html\\" src=\\"https://www.youtube.com/embed/52c_QSg64fs\\"></iframe>
</div>
 :youtube http://www.youshit.com<p></p>
"
`;

exports[`render youtube blocks repeated youtube with text before and after 1`] = `
"<p><strong>bold</strong> string before youtube 
</p><div class=\\"youtube-video\\">
<iframe type=\\"text/html\\" src=\\"https://www.youtube.com/embed/52c_QSg64fs\\"></iframe>
</div>
 after youtube 
<div class=\\"youtube-video\\">
<iframe type=\\"text/html\\" src=\\"https://www.youtube.com/embed/waefawefwaef\\"></iframe>
</div>
 <em>italics</em>
soft new line<p></p>
<p>new line</p>
"
`;

exports[`render youtube blocks youtube with timestamp 1`] = `
"<p>
</p><div class=\\"youtube-video\\">
<iframe type=\\"text/html\\" src=\\"https://www.youtube.com/embed/IJhgZBn-LHg?t=712\\"></iframe>
</div>
<p></p>
"
`;
